<?xml version="1.0" encoding="utf-8"?>
<ScrollView         xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_que"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="36sp" android:layout_marginTop="32dp"
            android:layout_marginStart="32dp" android:id="@+id/textView2"/>
    <TextView
            android:text="@string/daltonismo_uma_perturba_o_da_percep_o_visual_caracterizada_pela_incapacidade_de_diferenciar_todas_ou_algumas_cores"
            android:layout_width="349dp"
            android:layout_height="57dp"
            android:id="@+id/textView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/fa_a_o_teste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="36sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/teste_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste1Button" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:onClick="clique"/>
    <Button
            android:text="@string/teste_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste2Button" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/teste1Button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:onClick="clique"/>
    <Button
            android:text="@string/teste_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teste3Buttob" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/teste2Button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:onClick="clique"/>
    <TextView
            android:text="@string/resultados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.7"/>
    <TextView
            android:text="@string/r_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resp1Text" app:layout_constraintStart_toEndOf="@+id/teste1Button"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="28dp"/>
    <TextView
            android:text="@string/r_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resp2Text" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/teste2Button" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resp1Text" android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/r_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resp3Text" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/teste3Buttob" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resp2Text" android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/verificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verificarButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/teste3Buttob"/>
    <TextView
            android:text="@string/r_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultText" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/resp3Text"
            app:layout_constraintStart_toEndOf="@+id/verificarButton" android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>